--- a/app/project/community/templates/community/feed.html
+++ b/app/project/community/templates/community/feed.html
@@ -72,9 +72,11 @@
           <div class="post-comments">
             <span class="post-comments-count">{{ post.comment_count }} comments</span>
             <div class="expanded-comments">
-              {% for comment in post.comments.all %}
-                <span>{{ comment.bio }}</span>
+              {% with comments=post.comments.all %}
+              {% for comment in comments %}
+                <span>{{ comment.profile_name }}</span>
               {% endfor %}
+              {% endwith %}
             </div>
             
           </div>
