--- a/app/project/registration/templates/registration/base.html
+++ b/app/project/registration/templates/registration/base.html
@@ -51,8 +51,8 @@
           <img src="{% static './registration/images/connect-page-icon.svg' %}" alt="Connect Page">
         </a>
         <a href="{% url 'community:profile' %}">
-          {% if user_profile and user_profile.profile_picture.url %}
-          <img src="{{ user_profile.profile_picture.url }}" alt="Profile Page" class="profile-page-pic">
+          {% if logged_profile and logged_profile.profile_picture.url %}
+          <img src="{{ logged_profile.profile_picture.url }}" alt="Profile Page" class="profile-page-pic">
           {% else %}
             <img src="{% static './registration/images/profile-page-icon.svg' %}" alt="Profile Page">
           {% endif %}
