--- a/app/project/community/templates/community/user.html
+++ b/app/project/community/templates/community/user.html
@@ -85,7 +85,7 @@
           <span class="likes-data">{{ post.get_like_count }}</span>
           <span class="username-data">{{ post.user_profile.username }}</span>
           <span class="captionText-data">{{ post.post_caption }}</span>
-          <span class="commentCount-data">{{ post.comment_count }} comments</span>
+          <span class="commentCount-data">{{ post.get_comment_count }} comments</span>
           <div class="comments-data">
             {% for comment in post.comments.all %}
             <span class="commentersID-data">{{ comment.user_profile.id }} comments</span>
