--- a/app/project/community/static/community/styles/_profile.scss
+++ b/app/project/community/static/community/styles/_profile.scss
@@ -7,6 +7,14 @@ main#profile {
     flex-direction: column;
     gap: 32px;
 
+    .settings-btn {
+      align-self: flex-end;
+
+      img {
+        transform: scale(1.3);
+      }
+    }
+
     div.profile-header {
       display: flex;
       justify-content: center;
