--- a/app/project/community/templates/community/profile.html
+++ b/app/project/community/templates/community/profile.html
@@ -22,6 +22,9 @@
 {% if user_profile %}
 <main id="profile">
   <div class="profile-top">
+    <a class="settings-btn" href="">
+      <img src="{% static './community/images/settings-icon.svg' %}" alt="Settings Page">
+    </a>
     <div class="profile-header">
       <div class="profile-photo">
         <img
