--- a/app/project/community/static/community/styles/styles.css
+++ b/app/project/community/static/community/styles/styles.css
@@ -15,9 +15,14 @@ main#profile div.profile-top {
 }
 main#profile div.profile-top .settings-btn {
   align-self: flex-end;
+  padding: 8px;
+  border-radius: 8px;
 }
 main#profile div.profile-top .settings-btn img {
   transform: scale(1.3);
+}
+main#profile div.profile-top .settings-btn:hover {
+  background-color: #9ABCEF;
 }
 main#profile div.profile-top div.profile-header {
   display: flex;
