--- a/app/project/community/templates/community/settings.html
+++ b/app/project/community/templates/community/settings.html
@@ -7,6 +7,12 @@
 {% endblock %}
 {% block content %}
 <main id="settings">
-  <h1>Settings</h1>
+  <div class="settings-header">
+    <a class="back-to-profile-btn" href="{% url 'community:profile' %}">
+      <img src="{% static './community/images/back-button-icon.svg' %}" alt="Profile Page">
+    </a>
+    <h2>Settings</h2>
+    <a></a>
+  </div>
 </main>
 {% endblock %}
