--- a/app/project/community/templates/community/settings.html
+++ b/app/project/community/templates/community/settings.html
@@ -12,7 +12,13 @@
       <img src="{% static './community/images/back-button-icon.svg' %}" alt="Profile Page">
     </a>
     <h2>Settings</h2>
-    <a></a>
+    <a><span class="not-visible"></span></a>
+  </div>
+  <div class="setting-options">
+    <div class="setting-block">
+      <p>Update profile</p>
+      <p class="arrow-right">></p>
+    </div>
   </div>
 </main>
 {% endblock %}
