--- a/app/project/community/static/community/styles/styles.css
+++ b/app/project/community/static/community/styles/styles.css
@@ -714,4 +714,53 @@ main#settings .setting-options .setting-block p {
 main#settings .setting-options .setting-block .arrow-right {
   font-size: 1.6rem;
   font-weight: 700;
+}
+main#settings .modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+}
+main#settings .modal .modal-content {
+  background-color: #fefefe;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  max-width: 400px;
+  margin: 0 auto;
+}
+main#settings .modal .modal-content .close-btn {
+  display: flex;
+  justify-content: flex-end;
+  cursor: pointer;
+  font-size: 3rem;
+}
+main#settings .modal .modal-content form p {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 8px;
+  align-items: flex-start;
+}
+main#settings .modal .modal-content form input, main#settings .modal .modal-content form textarea {
+  width: 100%;
+  height: 2rem;
+  font-size: 0.9rem;
+}
+main#settings .modal .modal-content form input#id_is_completed {
+  width: 30px;
+}
+main#settings .modal .modal-content form textarea {
+  height: 200px;
+}
+main#settings .modal .modal-content form label {
+  font-size: 1.2rem;
+  font-weight: bold;
+  width: 100%;
 }/*# sourceMappingURL=styles.css.map */
