--- a/app/project/community/templates/community/settings.html
+++ b/app/project/community/templates/community/settings.html
@@ -21,5 +21,24 @@
       <p class="arrow-right">></p>
     </div>
   </div>
+  <!-- Modal for creating a profile -->
+  <div id="createProfileModal" class="modal">
+    <div class="modal-content">
+      <span class="close-btn" onclick="closeModal('#createProfileModal')">&times;</span>
+      <div id="modalContent">
+        <form action="" method="post" novalidate enctype="multipart/form-data">
+          {% csrf_token %} 
+          {{ form.as_p }}
+          <input class="btn" type="submit" value="Create Profile" />
+        </form>
+      </div>
+    </div>
+  </div>
+  <script>
+    function closeModal(id) {
+      const closeBtn = document.querySelector(id);
+      closeBtn.style.display = "none";
+    }
+  </script>
 </main>
 {% endblock %}
