--- a/app/project/community/static/community/styles/_settings.scss
+++ b/app/project/community/static/community/styles/_settings.scss
@@ -22,6 +22,10 @@ main#settings {
   }
 
   .setting-options {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+
     margin-top: 48px;
 
     .setting-block {
