--- a/app/project/community/static/community/styles/styles.css
+++ b/app/project/community/static/community/styles/styles.css
@@ -691,6 +691,9 @@ main#settings .settings-header .not-visible {
   padding: 8px;
 }
 main#settings .setting-options {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
   margin-top: 48px;
 }
 main#settings .setting-options .setting-block {
