--- a/app/project/community/static/community/styles/styles.css
+++ b/app/project/community/static/community/styles/styles.css
@@ -155,16 +155,15 @@ main#profile .achievements .award {
   border-radius: 8px;
   width: -moz-max-content;
   width: max-content;
+  min-width: 450px;
   height: auto;
   padding: 8px 16px;
   background-color: #FFFFFF;
 }
 main#profile .achievements .award .award-img {
-  background-color: lightblue;
   width: 100px;
   height: 100px;
   border-radius: 8px;
-  border: 1px solid rgba(0, 0, 0, 0.2);
 }
 main#profile .achievements .award .award-img img {
   width: 100px;
@@ -172,7 +171,6 @@ main#profile .achievements .award .award-img img {
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 8px;
-  border: 1px solid rgba(0, 0, 0, 0.2);
 }
 main#profile .achievements .award .award-info .award-name {
   font-weight: 700;
