--- a/app/project/registration/static/registration/styles/styles.css
+++ b/app/project/registration/static/registration/styles/styles.css
@@ -149,4 +149,24 @@ main {
     flex-direction: column;
     align-items: center;
   }
+}
+main#home .filter-options .filter-action-element {
+  display: flex;
+  margin: 16px 0;
+}
+main#home .filter-options .filter-action-element select {
+  width: 30vw;
+  min-width: 200px;
+  border-bottom-left-radius: 8px;
+  border-top-left-radius: 8px;
+}
+main#home .filter-options .filter-action-element select, main#home .filter-options .filter-action-element button {
+  height: 40px;
+  padding: 0 8px;
+}
+main#home .filter-options .filter-action-element button {
+  width: 15vw;
+  min-width: 91px;
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
 }/*# sourceMappingURL=styles.css.map */
